//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  firstName String [not null]
  lastName String
  password String [not null]
  phoneNumber String [unique]
  isPhoneVerified Boolean [not null, default: false]
  isEmailVerified Boolean [not null, default: false]
  isMultiFactorAuthEnabled Boolean [not null, default: false]
  profilePicture images
  profilePictureId String
  refreshToken String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  associatedWorkspaces workspaces [not null]
  otp otps [not null]
  ownedWorkspaces workspaces [not null]
  createdWorkdpaces workspaces [not null]
  defaultWorkspace workspaces
  defaultWorkspaceId String
}

Table roles {
  id String [pk]
  roleName String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  workspaceId String [not null]
  permissions permissions [not null]

  indexes {
    (roleName, workspaceId) [unique]
  }
}

Table permissions {
  id String [pk]
  moduleName String [not null]
  actions PermissionActions[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  role roles [not null]
  roleId String [not null]
  workspaceId String [not null]

  indexes {
    (moduleName, roleId) [unique]
  }
}

Table otps {
  id String [pk]
  otp Int [not null]
  email String
  phoneNumber String
  createdAt DateTime [default: `now()`, not null]
  expiredAt DateTime [not null]
  user users
  userId String [unique]
  sentOver OtpSentTo [not null]
  verifiedAt DateTime

  indexes {
    (otp, userId) [unique]
  }
}

Table workspaces {
  id String [pk]
  name String [not null]
  description String
  logo images
  logoId String
  website String
  country String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  users users [not null]
  createdBy users [not null]
  createdById String [not null]
  ownedBy users [not null]
  ownedById String [not null]
  defaultWorkspace users [not null]
}

Table images {
  id String [pk]
  url String [not null]
  publicId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  workspace workspaces [not null]
  user users [not null]
  companyLogo companies [not null]
  contactProfile contacts [not null]
}

Table Tag {
  id String [pk]
  name String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  workspaceId String [not null]
  contact contacts [not null]
  company companies [not null]

  indexes {
    (name, workspaceId) [unique]
  }
}

Table companies {
  id String [pk]
  name String [not null]
  email String [not null]
  secondaryEmail String
  workspaceId String [not null]
  phone String
  secondaryPhone String
  website String
  preferredContactMethod PreferredContactMethod
  addresses addresses [not null]
  logo images
  logoId String
  referalSource sources [not null]
  preferredCurrency String
  preferredLanguage String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  isDeleted Boolean [not null, default: false]
  contacts contacts [not null]
  tags Tag [not null]

  indexes {
    (name, workspaceId) [unique]
    (email, workspaceId) [unique]
    (phone, workspaceId) [unique]
  }
}

Table contacts {
  id String [pk]
  firstName String [not null]
  lastName String
  email String
  phone String
  secondaryEmail String
  workspaceId String [not null]
  secondaryPhone String
  contactProfile images
  profileId String
  referalSource sources [not null]
  preferredCurrency String
  preferredLanguage String
  associatedCompany companies
  companyId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  isDeleted Boolean [not null, default: false]
  tags Tag [not null]
}

Table addresses {
  id String [pk]
  workspaceId String [not null]
  street String
  city String
  country String [not null]
  state String
  zip String
  company companies
  companyId String
}

Table sources {
  id String [pk]
  name String [not null]
  workspaceId String [not null]
  sourceType SourceType [not null]
  company companies
  companyId String
  contact contacts
  contactId String

  indexes {
    (name, workspaceId) [unique]
  }
}

Table associatedWorkspaces {
  associatedworkspacesId String [ref: > workspaces.id]
  usersId String [ref: > users.id]
}

Table contact_tags {
  contactId String [ref: > contacts.id]
  tagsId String [ref: > Tag.id]
}

Table company_tags {
  companyId String [ref: > companies.id]
  tagsId String [ref: > Tag.id]
}

Table referal_sources {
  referalsourceId String [ref: > sources.id]
  referalsourceId String [ref: > sources.id]
}

Enum PermissionActions {
  CREATE
  READ
  UPDATE
  DELETE
  PRINT
  EXPORT
  IMPORT
  MANAGE
  APPROVE
  REJECT
  DOWNLOAD
}

Enum OtpSentTo {
  EMAIL
  PHONE
}

Enum PreferredContactMethod {
  Email
  Phone
}

Enum SourceType {
  ReferalSource
  LeadSource
  CompaignSource
}

Ref: users.profilePictureId > images.id

Ref: users.defaultWorkspaceId > workspaces.id

Ref: permissions.roleId > roles.id

Ref: otps.userId > users.id

Ref: workspaces.logoId > images.id

Ref: workspaces.createdById > users.id

Ref: workspaces.ownedById > users.id

Ref: companies.logoId > images.id

Ref: contacts.profileId > images.id

Ref: contacts.companyId > companies.id

Ref: addresses.companyId > companies.id

Ref: sources.companyId > companies.id

Ref: sources.contactId > contacts.id